objects/ASI_HK_CRM_Sales_Order_History__c.object
<CustomObject>
    <description>ASI HK CRM Sales Order History</description>
    <fields>
        <fullName>ASI_CRM_AccountAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Total_FI_Amount__c</fullName>
        <label>Total FI Amount</label>
        <summarizedField>ASI_HK_CRM_Sales_Order_History_Detail__c.ASI_CRM_Total_FI_Amount__c</summarizedField>
        <summaryForeignKey>ASI_HK_CRM_Sales_Order_History_Detail__c.ASI_HK_CRM_Sales_Order_History__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Invoice</label>
        <referenceTo>ASI_CRM_Payment_Invoice__c</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Request</label>
        <referenceTo>ASI_KOR_Sales_Order_Request__c</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sales Order Histories (Sold To)</relationshipLabel>
        <relationshipName>Sales_Order_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_FI_Amount__c</fullName>
        <label>Total FI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Account_PA__c</fullName>
        <label>Account (PA)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ASI_HK_CRM_Sales_Order_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRK</fullName>
                </value>
                <value>
                    <fullName>PRK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Customer_PO__c</fullName>
        <label>Customer PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_EDI_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDI Invoice</label>
        <referenceTo>ASI_CRM_EDI_Invoice_Header__c</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_JDE_Invoice_No__c</fullName>
        <label>JDE Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Order_Entry_Date__c</fullName>
        <label>Order Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Order_No__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>On Order Free Goods</fullName>
                </value>
                <value>
                    <fullName>Free Goods</fullName>
                </value>
                <value>
                    <fullName>Normal Sale Hong Kong (AB DF)</fullName>
                </value>
                <value>
                    <fullName>Normal Sale Hong Kong (CD DF)</fullName>
                </value>
                <value>
                    <fullName>Stock Off3 Return (HK S. Prom)</fullName>
                </value>
                <value>
                    <fullName>Stock Offer 4 Return (HK S.P.)</fullName>
                </value>
                <value>
                    <fullName>Sales Order - Stock to Consign</fullName>
                </value>
                <value>
                    <fullName>Stock Offer 3 (Return)</fullName>
                </value>
                <value>
                    <fullName>Credit Order (Inter-CO)</fullName>
                </value>
                <value>
                    <fullName>Consignment Sales Return</fullName>
                </value>
                <value>
                    <fullName>Credit Order</fullName>
                </value>
                <value>
                    <fullName>Reversal of Staff Function</fullName>
                </value>
                <value>
                    <fullName>Credit Note (Interco sales)</fullName>
                </value>
                <value>
                    <fullName>Sales Order - HK</fullName>
                </value>
                <value>
                    <fullName>Stock Offer 3 - HK</fullName>
                </value>
                <value>
                    <fullName>Stock Offer 3 (HK Sales Prom)</fullName>
                </value>
                <value>
                    <fullName>Stock Offer 4 (HK Sales Prom)</fullName>
                </value>
                <value>
                    <fullName>Consignment Sales</fullName>
                </value>
                <value>
                    <fullName>Stock Offer 3</fullName>
                </value>
                <value>
                    <fullName>Sales Order (Inventory Issue)</fullName>
                </value>
                <value>
                    <fullName>Sales Order (Inter-CO)</fullName>
                </value>
                <value>
                    <fullName>Invoice Adjustment (Price/ADJ)</fullName>
                </value>
                <value>
                    <fullName>Staff Function</fullName>
                </value>
                <value>
                    <fullName>Sales Order - DF to DP</fullName>
                </value>
                <value>
                    <fullName>Inter-company Sales</fullName>
                </value>
                <value>
                    <fullName>Invoice Adj. (Price Adj)</fullName>
                </value>
                <value>
                    <fullName>Normal Sales Shanghai (Yi Jia)</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Stk Offer 3 Rtn-MKT PO(Sales)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SF_Order_No__c</fullName>
        <label>SF Order No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SIT_Report_Month_Formula__c</fullName>
        <formula>CASE(MONTH( ASI_HK_CRM_Delivery_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <label>SIT Report - Month (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SIT_Report_Month_Picklist__c</fullName>
        <label>SIT Report - Month (Picklist)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SIT_Report_Year_Formula__c</fullName>
        <formula>TEXT(YEAR( ASI_HK_CRM_Delivery_Date__c ))</formula>
        <label>SIT Report - Year (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_INFO_SOHHID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_INFO_SOHHID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Purchasing_Purpose__c</fullName>
        <label>Purchase Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Consumption</fullName>
                </value>
                <value>
                    <fullName>Social Consumption</fullName>
                </value>
                <value>
                    <fullName>Self Collection</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MY_Order_Date_Report__c</fullName>
        <formula>IF(MONTH(ASI_HK_CRM_Order_Date__c) == 1, &quot;January&quot;, 
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 2, &quot;February&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 3, &quot;March&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 4, &quot;April&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 5, &quot;May&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 6, &quot;June&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 7, &quot;July&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 8, &quot;August&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 9, &quot;September&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 10, &quot;October&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 11, &quot;November&quot;,
IF(MONTH(ASI_HK_CRM_Order_Date__c) == 12, &quot;December&quot;,
null
))))))))))))</formula>
        <label>Order Date - Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Histories (Sold To)</relationshipLabel>
        <relationshipName>Sales_Order_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order History</label>
    <listViews>
        <fullName>ASI_CRM_KH_Sales_Order_History</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Account_PA__c</columns>
        <columns>ASI_HK_CRM_Order_No__c</columns>
        <columns>ASI_HK_CRM_JDE_Invoice_No__c</columns>
        <columns>ASI_HK_CRM_Customer_PO__c</columns>
        <columns>ASI_TH_CRM_Sold_To__c</columns>
        <columns>ASI_HK_CRM_Order_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Type__c</columns>
        <columns>ASI_HK_CRM_Delivery_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Status__c</columns>
        <columns>ASI_HK_CRM_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_CRM_KH_Sales_Order_History</value>
        </filters>
        <label>KH Sales Order History</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_KH</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_JP_Sales_Order_History1</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_CRM_JP_Sales_Order_History</value>
        </filters>
        <label>All JP Sales Order History</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_MY_Sales_Order_History</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Account_PA__c</columns>
        <columns>ASI_HK_CRM_Order_No__c</columns>
        <columns>ASI_HK_CRM_JDE_Invoice_No__c</columns>
        <columns>ASI_HK_CRM_Customer_PO__c</columns>
        <columns>ASI_TH_CRM_Sold_To__c</columns>
        <columns>ASI_HK_CRM_Order_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Type__c</columns>
        <columns>ASI_HK_CRM_Delivery_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Status__c</columns>
        <columns>ASI_HK_CRM_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_CRM_MY_Sales_Order_History</value>
        </filters>
        <label>All - MY Sales Order History</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TH_Sales_Order_History</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Account_PA__c</columns>
        <columns>ASI_HK_CRM_Order_No__c</columns>
        <columns>ASI_HK_CRM_JDE_Invoice_No__c</columns>
        <columns>ASI_HK_CRM_Customer_PO__c</columns>
        <columns>ASI_TH_CRM_Sold_To__c</columns>
        <columns>ASI_HK_CRM_Order_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Type__c</columns>
        <columns>ASI_HK_CRM_Delivery_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Status__c</columns>
        <columns>ASI_HK_CRM_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_TH_CRM_Sales_Order_History</value>
        </filters>
        <label>All - TH Sales Order History</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TW_Sales_Order_History</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Account_PA__c</columns>
        <columns>ASI_HK_CRM_Order_No__c</columns>
        <columns>ASI_HK_CRM_JDE_Invoice_No__c</columns>
        <columns>ASI_HK_CRM_Customer_PO__c</columns>
        <columns>ASI_TH_CRM_Sold_To__c</columns>
        <columns>ASI_HK_CRM_Order_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Type__c</columns>
        <columns>ASI_HK_CRM_Delivery_Date__c</columns>
        <columns>ASI_HK_CRM_Order_Status__c</columns>
        <columns>ASI_HK_CRM_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_CRM_TW_Sales_Order_History</value>
        </filters>
        <label>All - TW Sales Order History</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_SO_History</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Order_Type__c</columns>
        <columns>ASI_HK_CRM_Company_Code__c</columns>
        <columns>ASI_CRM_AccountAdditionalField__c</columns>
        <columns>ASI_HK_CRM_Customer_PO__c</columns>
        <columns>ASI_HK_CRM_Delivery_Address__c</columns>
        <columns>ASI_HK_CRM_Delivery_Date__c</columns>
        <columns>ASI_HK_CRM_JDE_Invoice_No__c</columns>
        <columns>ASI_HK_CRM_Order_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_Sold_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_CRM_SG_Sales_Order_History</value>
        </filters>
        <label>SG SO History</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_SG_Potential_Outlet_Share</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_SO_History_SO</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Order_Type__c</columns>
        <columns>ASI_HK_CRM_Order_Status__c</columns>
        <columns>ASI_HK_CRM_Company_Code__c</columns>
        <columns>ASI_CRM_AccountAdditionalField__c</columns>
        <columns>ASI_HK_CRM_Customer_PO__c</columns>
        <columns>ASI_HK_CRM_Delivery_Address__c</columns>
        <columns>ASI_HK_CRM_Delivery_Date__c</columns>
        <columns>ASI_HK_CRM_JDE_Invoice_No__c</columns>
        <columns>ASI_HK_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Sales_Order_History__c.ASI_CRM_SG_Sales_Order_History</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Order_Type__c</field>
            <operation>equals</operation>
            <value>Singapore DF &amp; DP Sales Order - SO</value>
        </filters>
        <label>SG SO History - SO</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_SG_Potential_Outlet_Share</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SOH-{00000}</displayFormat>
        <label>Sales Order History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Histories</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Sales_Order_History</fullName>
        <active>true</active>
        <label>JP CRM Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_KH_Sales_Order_History</fullName>
        <active>true</active>
        <label>KH Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Sales_Order_History</fullName>
        <active>true</active>
        <label>MY Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_PH_Sales_Order_History</fullName>
        <active>true</active>
        <label>PH CRM Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Sales_Order_History</fullName>
        <active>true</active>
        <label>SG CRM Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Sales_Order_History</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Sales_Order_History</fullName>
        <active>true</active>
        <label>HK CRM Sales Order History</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Sales_Order_History</fullName>
        <active>true</active>
        <label>TH CRM Sales Order History</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>